Seguimiento en cliente potencial, socio, proveedores y cuentas generales

--- a/app/Resources/views/crmcuenta/index_cliente_potencial.html.twig
+++ b/app/Resources/views/crmcuenta/index_cliente_potencial.html.twig
@@ -8,6 +8,7 @@
 {% block customcss %}
     <link rel="stylesheet" href="{{ asset('Resources/customscss/salestage.css') }}">
     <link rel="stylesheet" href="{{ asset('Resources/slider/css/bootstrap-slider.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('Resources/customscss/timeline/timeline.css') }}">
     <style type="text/css">
         .errorform{
             border: 1px solid #F00 !important;
@@ -15,20 +16,7 @@
     </style>
 {% endblock %}
 {% block navegacion %}
-            {% include ':crm_dashboard:crm_menu.html.twig' %}
-
-            {% for tipo in tiposCuenta if tipo.id>4 %}
-                {# {% include ':crm_dashboard:crm_menu.html.twig' %} #}
-                <a href="{{path('admin_accounts_index',{nombre:tipo.nombre})|lower}}" class="leftnava">
-                    <li class="leftnav left {% if opcion is defined and tipo.nombre==opcion  %}active {% endif %}">
-                        {{tipo.nombre}}
-                        <span class="pull-right right">
-                            <i class="{% if opcion is defined and tipo.nombre==opcion  %}fa fa-arrow-right {% endif %}"></i>
-                        </span>
-                    </li>
-                </a>
-            {% endfor %}
-
+        {% include ':crmcuenta:opciones_cuenta.html.twig' %}
 {% endblock %}
 
 
@@ -87,11 +75,17 @@
 {% block js_extend %}
     
     <script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('Resources/persist/client/client-potential.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('Resources/animations/client/client-potential.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/client/client-potential.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/animations/client/client-potential.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/seguimiento.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/add-comment.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/tags.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/moment.js') }}"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             /////Definición datatable
+            $('#filterTag').removeClass('hidden');
+            var valor = $('#selectTags').val();
             var table = $('#clientePotencialList').DataTable({
                 dom:'ftp',
                 "processing": false,
@@ -147,12 +141,21 @@
             });
             /////Fin definición datatable
 
+
+            $(document).on('change', '#selectTags', function(event) {
+                valor = $(this).val();
+                var url = Routing.generate('admin_clients_potencial_data')+"?param1="+valor;
+                table.ajax.url(url).load();
+            });
+            
+
             $('#dpbTitulo').select2();
             $('.dpbTipoPhone').select2();
             $('.dpbInteres').select2();
             $('.dpbEstado').select2();
             $('.dpbFuente').select2();
             $('.dpbCampania').select2();
+            $('#selectTags').select2();
         });
     </script>
      
