--- a/app/Resources/views/crmcuenta/index_account.html.twig
+++ b/app/Resources/views/crmcuenta/index_account.html.twig
@@ -8,6 +8,9 @@
 {% block customcss %}
     <link rel="stylesheet" href="{{ asset('Resources/customscss/salestage.css') }}">
     <link rel="stylesheet" href="{{ asset('Resources/slider/css/bootstrap-slider.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('Resources/customscss/errors.css') }}">
+    <link rel="stylesheet" href="{{ asset('Resources/customscss/forms.css') }}">
+    <link rel="stylesheet" href="{{ asset('Resources/customscss/timeline/timeline.css') }}">
     <style type="text/css">
         .errorform{
             border: 1px solid #F00 !important;
@@ -15,20 +18,7 @@
     </style>
 {% endblock %}
 {% block navegacion %}
-
-            {% include ':crm_dashboard:crm_menu.html.twig' %}
-              {% for tipo in tiposCuenta if tipo.id>4 %}
-                {# {% include ':crm_dashboard:crm_menu.html.twig' %} #}
-                <a href="{{path('admin_accounts_index',{nombre:tipo.nombre})|lower}}" class="leftnava">
-                    <li class="leftnav left {% if opcion is defined and tipo.nombre|lower==opcion  %}active {% endif %}">
-                        {% set idCuenta =tipo.id %}
-                        {{tipo.nombre}}
-                        <span class="pull-right right">
-                            <i class="{% if opcion is defined and tipo.nombre|lower==opcion  %}fa fa-arrow-right {% endif %}"></i>
-                        </span>
-                    </li>
-                </a>
-            {% endfor %}
+        {% include ':crmcuenta:opciones_cuenta.html.twig' %}
 {% endblock %}
 {% block descripcion %}
      <div class="col-md-5">
@@ -85,17 +75,23 @@
 {% block js_extend %}
     
     <script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('Resources/persist/account/account.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('Resources/animations/account/account.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/account/account.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/animations/account/account.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/seguimiento.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/add-comment.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/tags.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/moment.js') }}"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             /////Definición datatable
+            $('#filterTag').removeClass('hidden');
+            var valor = $('#selectTags').val();
             var table = $('#accountsList').DataTable({
                 dom:'ftp',
                 "processing": false,
                 "serverSide": true,
                 "ajax": {
-                    "url": '{{path('admin_accounts_data')}}?nombre={{opcion}}',
+                    "url": '{{path('admin_accounts_data')}}?nombre={{opcion}}&param1'+valor,
                     "type": 'GET'
                 },
                 "columns": [
@@ -147,6 +143,16 @@
             $('.dpbTipoPhone').select2();
             $('.dpbTipoPersona').select2();
             $('.dpbIndustria').select2();
+            $('#selectTags').select2();
+            
+            $(document).on('change', '#selectTags', function(event) {
+                valor = $(this).val();
+                var url = Routing.generate('admin_accounts_data')+"?nombre={{opcion}}"+"&param1="+valor;
+                table.ajax.url(url).load();
+            });
+            
+            
+            
         });
     </script>
      
