Seguimiento en campañas

--- a/app/Resources/views/crmactividad/task.html.twig
+++ b/app/Resources/views/crmactividad/task.html.twig
@@ -118,6 +118,6 @@
                         </form>
                     </div>
                     {# <div class="panel-footer">Panel Footer</div> #}
-                    {% include ':crmactividad:comments_section.html.twig' %}
+                    {% include ':crmcomentarios:comments_section.html.twig' %}
             </div>
 </div>
