--- a/app/Resources/views/crmcuenta/cliente_potencial.html.twig
+++ b/app/Resources/views/crmcuenta/cliente_potencial.html.twig
@@ -19,6 +19,7 @@
                             <input id="txtId1" type="hidden" name="id1" class="input-sm form-control">
                             <input id="txtId2" type="hidden" name="id2" class="input-sm form-control">
                             <input id="iteracion" type="hidden" name="iteracion" class="input-sm form-control">
+                            <input id="txtTipoComment" type="hidden" name="txtTipoComment" class="input-sm form-control" value="1">{#1 cuentas para campañas#}
                             <input id="txtName" type="text" name="nombre" class="input-sm form-control validateInput">
                         </div>
                         <div class="col-md-5">
@@ -162,6 +163,6 @@
                     
                         </div>
                     </div>
-                    {% include ':crmcuenta:comments_section.html.twig' %}
+                    {% include ':crmcomentarios:comments_section.html.twig' %}
         </div>
 </div>
