--- a/app/Resources/views/crmcuenta/socio.html.twig
+++ b/app/Resources/views/crmcuenta/socio.html.twig
@@ -19,6 +19,7 @@
                             <input id="txtId1" type="hidden" name="id1" class="input-sm form-control">
                             <input id="txtId2" type="hidden" name="id2" class="input-sm form-control">
                             <input id="iteracion" type="hidden" name="iteracion" class="input-sm form-control">
+                            <input id="txtTipoComment" type="hidden" name="txtTipoComment" class="input-sm form-control" value="1">
                             <input id="primeraFecha" type="hidden" name="iteracion" class="input-sm form-control">
                             <input id="txtName" type="text" name="nombre" class="input-sm form-control validateInput">
                         </div>
@@ -152,7 +153,7 @@
     </div> #}
 
 
-        {% include ':crmcuenta:comments_section.html.twig' %}
+        {% include ':crmcomentarios:comments_section.html.twig' %}
     
             {#<div class="qa-message-list" id="wallmessages">
 
