--- a/app/Resources/views/ctlempresa/wizard.html.twig
+++ b/app/Resources/views/ctlempresa/wizard.html.twig
@@ -16,8 +16,8 @@
                 {% block acciones %}{% endblock acciones %}
             </div>	                	
         {% endblock %}  
-        <div style="margin-bottom: 35px;">      
-            <p class="robo" style="font-size: 35px; font-weight: 300; font-family: 'Roboto', sans-serif; margin-bottom: 0px;">{{encabezadoWizard}}</p>
+        <div style="margin-bottom: 10px;">      
+            <p class="encabezadoWizard robo" style="font-size: 35px; font-weight: 300; font-family: 'Roboto', sans-serif; margin-bottom: 0px;">{{encabezadoWizard}}</p>
         </div>
         
         <div class="clearfix"></div>
@@ -27,129 +27,101 @@
                 <div class="wizard-inner">
                     <div class="connecting-line"></div>
                     <ul class="nav nav-tabs" role="tablist">
-
                         <li role="presentation" class="active">
-                            <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Step 1">
+                            <a href="#welcome" data-toggle="tab" aria-controls="welcome" role="tab" title="{#{{step1Wizard}}#}">
                                 <span class="round-tab">
-                                    <i class="glyphicon glyphicon-folder-open"></i>
+                                    <i class="icono glyphicon glyphicon-home"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li role="presentation" class="disabled">
+                            <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="{#{{step2Wizard}}#}">
+                                <span class="round-tab">
+                                    <i class="icono glyphicon glyphicon-briefcase"></i>
                                 </span>
                             </a>
                         </li>
 
                         <li role="presentation" class="disabled">
-                            <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Step 2">
+                            <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="{#{{step3Wizard}}#}">
                                 <span class="round-tab">
-                                    <i class="glyphicon glyphicon-pencil"></i>
+                                    <i class="icono glyphicon glyphicon-user"></i>
                                 </span>
                             </a>
                         </li>
                         <li role="presentation" class="disabled">
-                            <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Step 3">
+                            <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="{#{{step4Wizard}}#}">
                                 <span class="round-tab">
-                                    <i class="glyphicon glyphicon-picture"></i>
+                                    <i class="icono glyphicon glyphicon-picture"></i>
                                 </span>
                             </a>
                         </li>
 
                         <li role="presentation" class="disabled">
-                            <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Complete">
+                            <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="{#{{step5Wizard}}#}">
                                 <span class="round-tab">
-                                    <i class="glyphicon glyphicon-ok"></i>
+                                    <i class="icono glyphicon glyphicon-ok"></i>
                                 </span>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <form role="form">
+                {#<form role="form">#}
+                <input id="pasoActual" type="hidden" name="pasoActual" class="input-sm form-control" >
                     <div class="tab-content">
-                        <div class="tab-pane active" role="tabpanel" id="step1">
-                            <div class="step1" style="padding: 5px;">
+                        <div class="tab-pane active" role="tabpanel" id="welcome">
+                            <div class="step1" style="padding: 7px;">
                                 <div id="step-1" class="panel panel-default">
-                                    <div class="panel-heading"><div class="">Step 1</div></div>
+                                    <div class="panel-heading"><div class="wellcomeWiz">{{step1Wizard}}</div></div>
                                     <div class="panel-body">
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <label class="control-label">First Name</label>
-                                                <input  maxlength="100" type="text" required="required" class="form-control" placeholder="Enter First Name"  />
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label">Last Name</label>
-                                                <input maxlength="100" type="text" required="required" class="form-control" placeholder="Enter Last Name" />
-                                            </div>
-                                            <ul class="list-inline pull-right">
-                                                <li><button type="button" class="btn btn-primary next-step">Save and continue</button></li>
-                                            </ul>
-                                        </div>
+                                        {% include ':ctlempresa:welcome.html.twig' %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane" role="tabpanel" id="step1">
+                            <div class="step1" style="padding: 7px;">
+                                <div id="step-1" class="panel panel-default">
+                                    <div class="panel-heading"><div class="">{{step2Wizard}}</div></div>
+                                    <div class="panel-body">
+                                        {% include ':ctlempresa:step1.html.twig' %}
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="tab-pane" role="tabpanel" id="step2">
-                            <div class="step2" style="padding: 5px;">
+                            <div class="step2" style="padding: 7px;">
                                 <div id="step-2" class="panel panel-default">
-                                    <div class="panel-heading"><div class="">Step 2</div></div>
+                                    <div class="panel-heading"><div class="">{{step3Wizard}}</div></div>
                                     <div class="panel-body">
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <label class="control-label">Company Name</label>
-                                                <input maxlength="200" type="text" required="required" class="form-control" placeholder="Enter Company Name" />
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label">Company Address</label>
-                                                <input maxlength="200" type="text" required="required" class="form-control" placeholder="Enter Company Address"  />
-                                            </div>
-                                            <ul class="list-inline pull-right">
-                                                <li><button type="button" class="btn btn-default prev-step">Previous</button></li>
-                                                <li><button type="button" class="btn btn-primary next-step">Save and continue</button></li>
-                                            </ul>
-                                        </div>
+                                        {% include ':ctlempresa:step2.html.twig' %}
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="tab-pane" role="tabpanel" id="step3">
-                            <div class="step3" style="padding: 5px;">
+                            <div class="step3" style="padding: 7px;">
                                 <div id="step-3" class="panel panel-default">
-                                    <div class="panel-heading"><div class="">Step 3</div></div>
+                                    <div class="panel-heading"><div class="">{{step4Wizard}}</div></div>
                                     <div class="panel-body">
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <label class="control-label">Company Name</label>
-                                                <input maxlength="200" type="text" required="required" class="form-control" placeholder="Enter Company Name" />
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="control-label">Company Address</label>
-                                                <input maxlength="200" type="text" required="required" class="form-control" placeholder="Enter Company Address"  />
-                                            </div>
-                                            <ul class="list-inline pull-right">
-                                                <li><button type="button" class="btn btn-default prev-step">Previous</button></li>
-                                                <li><button type="button" class="btn btn-default next-step">Skip</button></li>
-                                                <li><button type="button" class="btn btn-primary btn-info-full next-step">Save and continue</button></li>
-                                            </ul>
-                                        </div>
+                                        {% include ':ctlempresa:step3.html.twig' %}
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="tab-pane" role="tabpanel" id="complete">
-                            <div class="step44" style="padding: 5px;">
+                            <div class="step44" style="padding: 7px;">
                                 <div id="step4" class="panel panel-default">
-                                    <div class="panel-heading"><div class="">Completed</div></div>
+                                    <div class="panel-heading"><div class="">{{step5Wizard}}</div></div>
                                     <div class="panel-body">
-                                        <div class="col-md-12">
-                                            <h3> Completed</h3>
-                                            <ul class="list-inline pull-right">
-                                                <li><button type="button" class="btn btn-default prev-step">Previous</button></li>
-                                                <li><button type="button" class="btn btn-success btn-info-full next-step">Finish</button></li>
-                                            </ul>
-                                        </div>
+                                        {% include ':ctlempresa:completed.html.twig' %}
                                     </div>
                                 </div>                                
                             </div>
                         </div>
                         <div class="clearfix"></div>
                     </div>                    
-                </form>
+                {#</form>#}
             </div> 
         </section>
     </div>
@@ -159,4 +131,69 @@
     <script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/persist/wizard/wizard.js') }}"></script> 
     <script type="text/javascript" src="{{ asset('Resources/animations/wizard/wizard.js') }}"></script> 
+    <script type="text/javascript" src="{{ asset('Resources/animations/funciones.js') }}"></script> 
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.idioma').select2();
+            $('#pasoActual').val(1);
+            
+            var dataEn = {
+                        encabezadoEn: '{{encabezadoWizard}}',
+                        step1En: '{{step1Wizard}}',
+                        btnWelcomeEn: '{{btnWelcome}}',
+                        language: '{{languageWizard}}',
+                        textoBienvenida: '{{textoBienvenida}}',
+                        englishLanguage: '{{englishLanguageWizard}}',
+                        spanishLanguage: '{{spanishLanguageWizard}}',
+                        companyNameWizard: '{{companyNameWizard}}',
+                        companyIndustryWizard: '{{companyIndustryWizard}}',
+                        companyAddressWizard: '{{companyAddressWizard}}',
+                        companyStateWizard: '{{companyStateWizard}}',
+                        companyCityWizard: '{{companyCityWizard}}',
+                        phoneWizard: '{{phoneWizard}}',
+                        extensionWizard: '{{extensionWizard}}',
+                        emailWizard: '{{emailWizard}}'
+                    };
+            
+            var dataEs = {
+                        encabezadoEs: '{{encabezadoWizardEs}}',
+                        step1Es: '{{step1WizardEs}}',
+                        btnWelcomeEs: '{{btnWelcomeEs}}',
+                        languageEs: '{{languageWizardEs}}',
+                        textoBienvenidaEs: '{{textoBienvenidaEs}}',
+                        englishLanguageEs: '{{englishLanguageWizardEs}}',
+                        spanishLanguageEs: '{{spanishLanguageWizardEs}}',
+                        companyNameWizardEs: '{{companyNameWizardEs}}',
+                        companyIndustryWizardEs: '{{companyIndustryWizardEs}}',
+                        companyAddressWizardEs: '{{companyAddressWizardEs}}',
+                        companyStateWizardEs: '{{companyStateWizardEs}}',
+                        companyCityWizardEs: '{{companyCityWizardEs}}',
+                        phoneWizardEs: '{{phoneWizardEs}}',
+                        extensionWizardEs: '{{extensionWizardEs}}',
+                        emailWizardEs: '{{emailWizardEs}}'
+                    };
+            
+            setInterval(function(){ if($('#pasoActual').val() == 1) {  cambiaTexto(dataEn, dataEs, 0);} }, 5000); 
+            
+            $("#btnWelcome").click(function (e) { 
+                var $active = $('.wizard .nav-tabs li.active');
+                $active.next().removeClass('disabled');
+                nextTab($active);
+                
+                $('#pasoActual').val(2);
+                var s = document.getElementById("language");
+                var language = s.options[s.selectedIndex].value;
+                
+                if(language == 1){
+                    cambiaTexto(dataEn, dataEs, 1);
+                } else if(language == 2){
+                    cambiaTexto(dataEn, dataEs, 2);
+                }
+            });
+        });
+        
+        function nextTab(elem) {
+            $(elem).next().find('a[data-toggle="tab"]').click();
+        }        
+    </script>
 {% endblock %}   
