--- a/app/Resources/views/crmcampania/new.html.twig
+++ b/app/Resources/views/crmcampania/new.html.twig
@@ -25,6 +25,7 @@
                                 <label>{{nameCampaniaReg}}</label>
                                 <label class="hidden requiredFields">{{requiredFields}}</label>
                                 <input id="txtId" type="hidden" name="txtId" class="input-sm form-control">
+                                <input id="iteracion" type="hidden" name="iteracion" class="input-sm form-control">
                                 <input id="txtTipoComment" type="hidden" name="txtTipoComment" class="input-sm form-control" value="3">{#3 para campañas#}
                                 <input id="txtName" type="text" name="txtName" class="input-sm form-control validateInput">
                             </div>
