--- a/app/Resources/views/crm_oportunidad/new.html.twig
+++ b/app/Resources/views/crm_oportunidad/new.html.twig
@@ -91,7 +91,7 @@
                 <label><input  name="hayProductos" type="checkbox" value="">{{hayProductosOportunidad}}</label>
             </div>
             <div class="clearfix"></div>
-            <div id="productos" class="hidden">
+            <div id="productos" class="hidden" >
                 <div style="margin-top: 30px;">
                     <hr>
                 </div>
@@ -123,11 +123,14 @@
                     </div>
                 </div>
                 <div class="cantidad col-sm-4">
-                    <input id="txtCantidad-0" type="text" name="cantidad[]" class="cant input-sm form-control text-center validateInput" value="1" min="1">                                                       
+                    <input id="txtCantidad-0" type="text" name="cantidad[]" class="cant input-sm form-control text-right validateInput" value="1" min="1">                                                       
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="col-md-6 pull-right text-right" style="margin-top:20px;">
+            <div style="margin-top:40px;">
+                <hr>
+            </div>
+            <div class="col-md-12 pull-right text-right">
                 <button id="btnCancel" class="btn btn-sm btn-default">{{cancel}}</button>
                 <button id="btnSave" class="btn btn-sm btn-primary">{{save}}</button>
             </div>
