--- a/app/Resources/views/crmactividad/menu_actividades.html.twig
+++ b/app/Resources/views/crmactividad/menu_actividades.html.twig
@@ -22,3 +22,11 @@
 		</span>
 	</li>
 </a>
+   <a href="{{path('crmcaso_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuCasoA is defined %}active {% endif %}">
+		{{menuCaso}}
+		<span class="pull-right right ">
+			<i class="{% if menuCasoA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
