--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -47,3 +47,13 @@
 		</span>
 	</li>
 </a>
+                
+ <a href="{{path('crmtipocaso_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuTipoCasoA is defined %}active {% endif %}">
+		{{menuTipoCaso}}
+		<span class="pull-right right ">
+			<i class="{% if menuTipoCasoA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
+
