--- a/app/Resources/views/crmcampania/index.html.twig
+++ b/app/Resources/views/crmcampania/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %} #}
 
 {% block navegacion %}
-        {#{% include ':crmcuenta:opciones_cuenta.html.twig' %}#}
+        {% include ':layout:menuventas.html.twig' %}
         {% include ':crmcuenta:add_files.html.twig' %}
 {% endblock %}
 
